--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "astro-blog-tutorial",
   "type": "module",
   "version": "0.0.1",
+  "browserslist": [
+    "defaults"
+  ],
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -10,8 +13,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.4.13",
     "@astrojs/check": "^0.5.6",
+    "astro": "^4.4.13",
+    "postcss": "^8.4.35",
+    "postcss-preset-env": "^9.5.0",
     "typescript": "^5.4.2"
   }
 }
