--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@astrojs/check": "^0.5.6",
     "astro": "^4.4.13",
+    "astro-icon": "^1.1.0",
     "postcss": "^8.4.35",
     "postcss-preset-env": "^9.5.0",
     "typescript": "^5.4.2"
