--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "postcss": "^8.4.35",
     "postcss-preset-env": "^9.5.0",
     "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "@iconify-json/tabler": "^1.1.106"
   }
 }
