--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.6",
+    "@astrojs/react": "^3.0.10",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.1.1",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "astro": "^4.4.13",
     "astro-icon": "^1.1.0",
     "postcss": "^8.4.35",
     "postcss-preset-env": "^9.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
